refactor: fix types, templates, navigation & uploads
